# routes/region.js
@@ -1,10 +1,12 @@
 const express = require('express');
 const router = express.Router();
+const requireLogin = require('../authMiddleware'); 
 const db = require('../models');
 const Region = db.region;
+const regionController = require('../controllers/region');
 
-// Get regions
-router.get('/', async (req, res) => {
+// Get all regions
+router.get('/', requireLogin, async (req, res) => {
   try {
     const regions = await Region.find();
     res.send(regions);
@@ -16,20 +18,11 @@ router.get('/', async (req, res) => {
   }
 });
 
-// Get users by region
-router.get('/user/region/:regionName', async (req, res) => {
-  const { regionName } = req.params;
 
-  try {
-    const users = await users.find({ region: regionName });
-    res.status(200).json(users);
-  } catch (err) {
-    res.status(500).json({
-      message: 'Error retrieving users by region',
-      error: err
-    });
-  }
-});
+
+
+router.put('/:regionName', requireLogin, regionController.updateRegion);
+router.delete('/:regionName', requireLogin, regionController.deleteRegion);
 
 
 module.exports = router;
