# swagger.json
@@ -21,6 +21,13 @@
     "/user": {
       "get": {
         "summary": "Get all users",
+        "security": [
+          {
+            "OpenID": [
+              "openid"
+            ]
+          }
+        ],
         "responses": {
           "200": {
             "description": "List of users"
@@ -56,6 +63,14 @@
     "/user/{username}": {
       "get": {
         "summary": "Get a user by username",
+        "security": [
+          {
+            "OpenID": [
+              "openid"
+            ]
+          }
+        ],
+
         "parameters": [
           {
             "name": "username",
@@ -79,6 +94,13 @@
       },
       "put": {
         "summary": "Update a user by username",
+        "security": [
+          {
+            "OpenID": [
+              "openid"
+            ]
+          }
+        ],
         "parameters": [
           {
             "name": "username",
@@ -111,6 +133,13 @@
       },
       "delete": {
         "summary": "Delete a user by username",
+        "security": [
+          {
+            "OpenID": [
+              "openid"
+            ]
+          }
+        ],
         "parameters": [
           {
             "name": "username",
@@ -133,21 +162,100 @@
         }
       }
     },
+    "/region": {
+      "get": {
+        "summary": "Get all regions",
+        "responses": {
+          "200": {
+            "description": "List of regions"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
     "/region/{regionName}": {
       "get": {
-        "summary": "Get users by region name",
+        "summary": "Get a region by name",
         "parameters": [
           {
             "name": "regionName",
             "in": "path",
-            "description": "Region name",
+            "description": "Name of the region",
             "required": true,
             "type": "string"
           }
         ],
         "responses": {
           "200": {
-            "description": "List of users matching the region name"
+            "description": "Region found"
+          },
+          "404": {
+            "description": "Region not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      },
+      "put": {
+        "summary": "Update a region by ID",
+        "security": [
+          {
+            "OpenID": [
+              "openid"
+            ]
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of the region",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "region",
+            "in": "body",
+            "description": "Updated region object",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/RegionInput"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Region updated successfully"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Delete a region by ID",
+        "security": [
+          {
+            "OpenID": [
+              "openid"
+            ]
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of the region",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Region deleted successfully"
           },
           "500": {
             "description": "Internal server error"
@@ -209,7 +317,6 @@
         "phoneNumber": {
           "type": "string"
         }
-        }
       },
       "required": [
         "username",
@@ -218,7 +325,6 @@
         "displayName",
         "email",
         "phoneNumber"
-        
       ]
     },
     "User": {
@@ -234,5 +340,31 @@
           "type": "string"
         }
       }
+    },
+    "securityDefinitions": {
+      "OpenID": {
+        "type": "oauth2",
+        "flow": "implicit",
+        "authorizationUrl": "https://example.com/oauth/authorize",
+        "scopes": {
+          "openid": "OpenID Connect"
+        }
+      }
+    },    
+    "RegionInput": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        }
+      },
+      "required": [
+        "name",
+        "description"
+      ]
     }
   }
+}
